# searchbar

./: .gitignore  Improvements.md  README.md  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  cache.json  config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  configuration.rs  db_cache.rs  disk_mapper.rs  disk_parser.rs  lib.rs  main.rs  search_result.rs
